# Alley_Park_Patrol

./: .gitignore  CLAUDE.md  README.md  SETUP.txt  amr_move.py  amr_move_peter.py  multi_webcam_object_mapper4.py  package.xml  plate_fail_test_logic.py  plate_fail_test_logic_ver_old.py  plate_faill_logic.py  plate_lida_run_test.py  plate_lida_run_with_yolo_test.py  plate_lida_test.py  plate_lida_test_amcl.py  setup.cfg  setup.py  yolo_test.py  zone_test.py
ai_models/: README.md
amr2/: amr2_mission_yolo_depth.py
app/: api_views.py  models.py  monitor_dashboard.py  monitor_views.py  serializers.py  urls.py
app/migrations/: 0001_initial.py  0002_detectionlog.py  0003_disabledvehicle.py  0004_parkingspot_alter_parkingevent_zone_type.py  (+5 more)
bridge/: bridge_amr1.py  bridge_amr2.py  bridge_amr_camera.py  bridge_ocr.py  bridge_webcam.py
config/: school_zones.yaml  urls.py
detect/: plate_ocr_node.py
final_pjt/: amr1_goal_publisher.py  amr2_mission.py  amr2_mission_lidar.py  amr2_mission_yolo.py  amr2_mission_yolo_depth_copy.py  fake_amr_node.py  fake_ocr_node.py  mission_queue.py  plate_ocr_node.py
front_system-monitor/: app.py  flask_log.txt
map/: final_map_ver4.pgm  final_map_ver4.yaml
server_monitor/: .gitignore  CLAUDE.md  requirements.txt
templates/: login_center.html  monitor_dashboard.html
test/: test_check_image.py  test_disabled_match.py  test_firecar_match.py  test_ocr_only.py  test_plate_match.py  test_regist_car.py
test_video/: test2.webm  test4.webm
webcam/: README.md  multi_webcam_object_mapper2.py  multi_webcam_object_mapper5.py
(+17 files in other folders)
